app-lumen/app-lumen-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-lumen
  namespace: app-lumen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-lumen
  template:
    metadata:
      labels:
        app: app-lumen
        tier: backend
    spec:
      volumes:
        - name: public-code
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-configmap
            items:
              - key: config
                path: site.conf
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1001
      containers:
      - name: app-lumen
        image: ghcr.io/mike-prog-lab/tasks-lumen/tl-php-fpm:development
        imagePullPolicy: IfNotPresent
        resources:  
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:  
          - containerPort: 9000
        volumeMounts:
          - name: public-code
            mountPath: /var/www/html/public
      - name: nginx
        image: nginxinc/nginx-unprivileged
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
          - containerPort: 8080
            protocol: TCP
            name: http
        volumeMounts:
          - name: public-code
            mountPath: /var/www/html/public
          - name: nginx-config
            mountPath: /etc/nginx/conf.d
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: app-lumen-service
  namespace: app-lumen
  labels:
    tier: backend
spec:
  selector:
    app: app-lumen
    tier: backend
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: fpm
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
