app-lumen/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-lumen
  namespace: app-lumen
  labels:
    name: app-lumen
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - app.test.lumen.eml.ua
      secretName: app-lumen-tls
  rules:
  - host: app.test.lumen.eml.ua
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-lumen-service
            port: 
              number: 80
